@@ -1,14 +1,20 @@
 package org.trypticon.pdn.nrbf.classes.records;
 
+import java.io.IOException;
+
 import com.google.common.io.LittleEndianDataInputStream;
 import org.trypticon.pdn.nrbf.NrbfRecord;
 import org.trypticon.pdn.nrbf.classes.structs.ClassInfo;
 import org.trypticon.pdn.nrbf.common.enums.RecordTypeEnumeration;
 import org.trypticon.pdn.nrbf.win32.INT32;
 
-import java.io.IOException;
-
 /**
+ * A less verbose alternative to {@link ClassWithMembersAndTypes}.
+ *
+ * It does not contain information about the Remoting Type information of the Members.
+ * This record can be used when the information is deemed unnecessary because it is
+ * known out of band or can be inferred from context.
+ *
  * [MS-NRBF] 2.3.2.2 ClassWithMembers
  */
 @SuppressWarnings("UnstableApiUsage")
@@ -34,10 +40,8 @@ public class ClassWithMembers extends NrbfRecord {
     }
 
     public static ClassWithMembers readFrom(LittleEndianDataInputStream stream) throws IOException {
-        // TODO: Figure out how this is supposed to work.
-        throw new UnsupportedOperationException("Not supported yet, not sure how to fill in missing type info");
-        // ClassInfo classInfo = ClassInfo.readFrom(stream);
-        // INT32 libraryId = INT32.readFrom(stream);
-        // return new ClassWithMembers(classInfo, libraryId);
+        ClassInfo classInfo = ClassInfo.readFrom(stream);
+        INT32 libraryId = INT32.readFrom(stream);
+        return new ClassWithMembers(classInfo, libraryId);
     }
 }
