@@ -1,13 +1,19 @@
 package org.trypticon.pdn.nrbf.classes.records;
 
+import java.io.IOException;
+
 import com.google.common.io.LittleEndianDataInputStream;
 import org.trypticon.pdn.nrbf.NrbfRecord;
 import org.trypticon.pdn.nrbf.classes.structs.ClassInfo;
 import org.trypticon.pdn.nrbf.common.enums.RecordTypeEnumeration;
 
-import java.io.IOException;
-
 /**
+ * A less verbose alternative to {@link ClassWithMembersAndTypes}.
+ *
+ * It does not contain a LibraryId or the information about the Remoting Types of the Members.
+ * This record implicitly specifies that the Class is in the System Library. This record can be used
+ * when the information is deemed unnecessary because it is known out of band or can be inferred from context.
+ *
  * [MS-NRBF] 2.3.2.4 SystemClassWithMembers
  */
 @SuppressWarnings("UnstableApiUsage")
@@ -25,9 +31,7 @@ public class SystemClassWithMembers extends NrbfRecord {
     }
 
     public static SystemClassWithMembers readFrom(LittleEndianDataInputStream stream) throws IOException {
-        // TODO: Figure out how this is supposed to work.
-        throw new UnsupportedOperationException("Not supported yet, not sure how to fill in missing type info");
-        // ClassInfo classInfo = ClassInfo.readFrom(stream);
-        // return new SystemClassWithMembers(classInfo);
+        ClassInfo classInfo = ClassInfo.readFrom(stream);
+        return new SystemClassWithMembers(classInfo);
     }
 }
