@@ -3,6 +3,7 @@
 
 - Changed source/target compatibility to Java 11
 - Bugfix: support for default blend mode when omitted (thanks @dalgarins)
+- Support for ClassWithMembers and SystemClassWithMembers (thanks @dalgarins)
 
 v0.1.1
 
